# recipe_app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
app/: .flake8  tests.py
app/app/: settings.py
app/core/: models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py
app/core/tests/: test_admin.py
app/main/migrations/: 0001_initial.py  0002_initial.py
